--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=""
-DB_DBNAME=hotel
+DB_HOST=b55r9xpac2kclzevkszc-mysql.services.clever-cloud.com
+DB_USERNAME=ug63ufsg8ubzvctb
+DB_PASSWORD=ug63ufsg8ubzvctb
+DB_DBNAME=b55r9xpac2kclzevkszc
