--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "vercel": "^33.6.2"
   }
 }
