--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "ain": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "netlify deploy --prod",
     "start": "node app.js"
   },
   "author": "",
@@ -13,14 +14,17 @@
     "body-parser": "^1.19.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.2",
-    "express": "^4.17.3",
+    "express": "^4.19.2",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "http": "^0.0.1-security",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "netlify-cli": "^17.21.1",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^2.0.3",
     "path": "^0.12.7",
+    "serverless-http": "^3.2.0",
     "vercel": "^33.6.2"
   }
 }
